# Alpha-Squadron

./: .gitignore  Aircraft.cpp  AircraftType.h  Audio.cpp  Button.cpp  CMakeLists.txt  Chopper.h  CodeStyle.xml  Command.h  Component.cpp  Container.h  DataTables.cpp  Debug.cpp  Engine.cpp  Entity.h  GameOverState.h  GameState.cpp  GameState.h  LoadingState.cpp  MusicId.h  NodeType.h  ParallelTask.cpp  PauseState.cpp  Pickup.h  Player.h  README.md  State.cpp  StateStack.cpp  TextureId.h  TitleState.cpp  TitleState.h  Tomcat.cpp  Tomcat.h  Utility.h  World.cpp  World.h  WorldNode.cpp  WorldNode.h  main.cpp  move_files.sh  (+1 more)
Assets/Textures/Characters/Bosses/Boss 1/PSD/: Boss_1_psd.psd  Boss_yellow.psd
Assets/Textures/Characters/Bosses/Boss 2/PSD/: Boss_2.psd  Boss_purple.psd
Assets/Textures/Characters/Bosses/Boss 3/PSD/: Boss_3.psd
Assets/Textures/Characters/Planes/B-17/Skin 1/PSD/: b_17_skin1_default.psd
Assets/Textures/Characters/Planes/B-17/Skin 2/PSD/: b_17_skin2.psd
Assets/Textures/Characters/Planes/IL2_Sturmovik/Skin 1/PSD/: IL2 Sturmovik.psd
Assets/Textures/Characters/Planes/IL2_Sturmovik/Skin 2/PSD/: IL2 Sturmovik.psd
Assets/Textures/Characters/Planes/Lola T-70/Skin 1/PSD/: lola_70_skin_1.psd
Assets/Textures/Characters/Planes/Lola T-70/Skin 2/PSD/: lola_70_skin_2.psd
Assets/Textures/Characters/Planes/Messerschmidt Me 262/Skin 1/PSD/: Messerschmidt Me 262 small.psd
Assets/Textures/Characters/Planes/Messerschmidt Me 262/Skin 2/PSD/: Messerschmidt Me 262 small.psd
Assets/Textures/Characters/Planes/Messerschmitt/Skin_1/PSD/: Messerchmitt_256_skin_1.psd
Assets/Textures/Characters/Planes/Messerschmitt/Skin_2/PSD/: Messerchmitt_256_skin_2.psd
Assets/Textures/Characters/Planes/Mitsubishi A6M/Skin 1/PSD/: Mitsubishi A6M skin 1.psd
Assets/Textures/Characters/Planes/Mitsubishi A6M/Skin 2/PSD/: Mitsubishi A6M skin 2.psd
Assets/Textures/Characters/Planes/Mitsubishi Type 96/Skin 1/PSD/: Mitsubishi Type 96 small.psd
Assets/Textures/Characters/Planes/Mitsubishi Type 96/Skin 2/PSD/: Mitsubishi Type 96 small.psd
Assets/Textures/Characters/Planes/Russian I-16/Skin 1/PSD/: i_16_skin1.psd
Assets/Textures/Characters/Planes/Russian I-16/Skin 2/PSD/: i_16_skin2.psd
Assets/Textures/Characters/Planes/Spitfire/Skin 1/PSD/: Spitfire_high_res.psd  Spitfire_psd.psd
Assets/Textures/Characters/Planes/Spitfire/Skin 2/PSD/: Spitfire_psd.psd
Assets/Textures/Characters/Planes/WWi Boeing B-47 Stratojet/Skin 1/PSD/: WWi Boeing B-47 Stratojet small.psd
Assets/Textures/Characters/Planes/WWi Boeing B-47 Stratojet/Skin 2/PSD/: WWi Boeing B-47 Stratojet small.psd
Assets/Textures/Characters/Tanks/British M4 Sherman/PSD/: British m4 Sherman.psd
Assets/Textures/Characters/Tanks/German Tiger-1/PSD/: German tiger 1 psd.psd
Assets/Textures/Characters/Tanks/Russian T-34/PSD/: Russian_t_34_psd.psd
Assets/Textures/Characters/Turrets/Turret 1/PSD/: turret_1.psd
Assets/Textures/Characters/Turrets/Turret 2/PSD/: Turret_2.psd  Turret_2_psd.psd
Assets/Textures/Characters/Turrets/Turret 3/PSD/: Turret 3.psd
DataFiles/: gameData.json
Engine/: Audio.cpp  Audio.h  Button.cpp  Button.h  Cache.h  Command.h  Container.cpp  Debug.cpp  Debug.h  Direction.h  EmptyWorldNode.h  Engine.cpp  Engine.h  Entity.h  FontId.h  Game.cpp  GameOverState.cpp  GameSprite.h  GameState.cpp  GameState.h  GameText.h  GameplayInput.cpp  GameplayInput.h  Input.cpp  Input.h  Label.cpp  Label.h  Layer.h  LoadingState.cpp  LoadingState.h  MenuState.cpp  MenuState.h  Network.cpp  NodeType.h  PauseState.cpp  PauseState.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  (+18 more)
Engine/Header/: Audio.h  Cache.h  Command.h  Debug.h  GameSprite.h  GameText.h  Input.h  Projectile.h  State.h  StateIdentifiers.h  StateStack.h  World.h
Engine/Source/: Audio.cpp  Debug.cpp  Game.cpp  Network.cpp  Projectile.cpp  ResourceManager.cpp  State.cpp  StateStack.cpp  World.cpp
Game/: AiRoutine.h  Aircraft.cpp  Aircraft.h  AircraftType.h  Chopper.cpp  Chopper.h  DataTables.cpp  DataTables.h  Direction.h  ProjectileType.h  ResourceManager.h  TextureId.h  Tomcat.cpp  Tomcat.h
Game/DataFiles/: aircraftData.json  gameData.json
Game/Header/: Aircraft.h  Chopper.h  MusicId.h  ResourceManager.h  Tomcat.h
Game/Source/: Aircraft.cpp  Chopper.cpp  Tomcat.cpp
Header/: Aircraft.h  Audio.h  AudioManager.h  Bullet.h  Cache.h  Character.h  Chopper.h  Command.h  CommandQueue.h  DataCache.h  Debug.h  DrawableData.h  DrawableEntity.h  Enemy.h  EnemyAircraft.h  Entity.h  EntityType.h  Font.h  FontId.h  Game.h  GameManager.h  GameSprite.h  GameText.h  Graphics.h  Helicopter.h  IComponent.h  Input.h  InputData.h  Jet.h  Layer.h  LogType.h  Logger.h  MusicId.h  MusicType.h  Network.h  NodeType.h  Player.h  PlayerAircraft.h  PooledSound.h  Projectile.h  (+17 more)
Headers/: AiRoutine.h  Aircraft.h  AircraftType.h  Audio.h  Button.h  Cache.h  Chopper.h  Command.h  CommandQueue.h  Component.h  Container.h  DataTables.h  Debug.h  Direction.h  EmptyWorldNode.h  Engine.h  Entity.h  FontId.h  GameOverState.h  GameSprite.h  GameState.h  GameText.h  Label.h  Layer.h  LoadingState.h  MenuState.h  MusicId.h  NodeType.h  ParallelTask.h  PauseState.h  Pickup.h  PickupType.h  Player.h  PooledSound.h  Projectile.h  ProjectileType.h  ResourceManager.h  SettingsState.h  SoundFxId.h  State.h  (+8 more)
Source/: Aircraft.cpp  Audio.cpp  AudioManager.cpp  Bullet.cpp  Button.cpp  Character.cpp  Chopper.cpp  Component.cpp  Container.cpp  DataCache.cpp  DataTables.cpp  Debug.cpp  Enemy.cpp  EnemyAircraft.cpp  Engine.cpp  Entity.cpp  Game.cpp  GameManager.cpp  GameOverState.cpp  GameState.cpp  Graphics.cpp  Helicopter.cpp  Input.cpp  Jet.cpp  Label.cpp  LoadingState.cpp  Logger.cpp  MenuState.cpp  Network.cpp  ParallelTask.cpp  PauseState.cpp  Pickup.cpp  Player.cpp  PlayerAircraft.cpp  Projectile.cpp  ResourceCache.cpp  ResourceManager.cpp  Scene.cpp  ScrollingBackground.cpp  SettingsState.cpp  (+12 more)
